--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAL_CPM_YON</title>
+    <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/B6YmtPr5/IMG-0050.jpg">
+    
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Ajuste para evitar desbordamiento */
@@ -295,3 +297,4 @@
     </script>
 </body>
 </html>
+
