Change title from 'PORTAL_CPM_YON' to 'YonCPM'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORTAL_CPM_YON</title>
+    <title>YonCPM</title>
     <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/B6YmtPr5/IMG-0050.jpg">
     
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
@@ -297,4 +297,5 @@
     </script>
 </body>
 </html>
+
 
