Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
 
         <div class="section-title">> DESCARGAS DISPONIBLES</div>
         <div class="grid-links">
-            <a href="https://www.mediafire.com/file/7q6i2094ggf5u49/GG+1234.rar/file" class="cyber-button download" target="_blank">📥 GG YON</a>
+            <a href="https://www.mediafire.com/file/xy9jb2xbeozlkh0/YonGG_1234.rar/file" class="cyber-button download" target="_blank">📥 GG YON</a>
             <a href="https://www.mediafire.com/file/xkgqp142x69viyo/ESPACIO+1234.rar/file" class="cyber-button download" target="_blank">📥 ESPACIO VIRTUAL</a>
-            <a href="https://www.mediafire.com/file/2kbn9370vgjh1l5/MALLU_CPM_SCRIPT_MENU_v5.1.lua/file" class="cyber-button download" target="_blank">📥 SCRIPT RECIENTE</a>
+            <a href="https://www.mediafire.com/file/uqwitw56des6y6w/5aBeR_KING_YOUTUBE_%252B2_part_32_4.9.6.lua/file" class="cyber-button download" target="_blank">📥 SCRIPT RECIENTE</a>
         </div>
 
         <div class="service-box">
@@ -297,6 +297,7 @@
     </script>
 </body>
 </html>
+
 
 
 
