--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="grid-links">
             <a href="https://www.mediafire.com/file/0vlm0erxdgr0wr6/YonGG_1234.rar/file" class="cyber-button download" target="_blank">📥 GG YON</a>
             <a href="https://www.mediafire.com/file/xkgqp142x69viyo/ESPACIO+1234.rar/file" class="cyber-button download" target="_blank">📥 ESPACIO VIRTUAL</a>
-            <a href="https://www.mediafire.com/file/uqwitw56des6y6w/5aBeR_KING_YOUTUBE_%252B2_part_32_4.9.6.lua/file" class="cyber-button download" target="_blank">📥 SCRIPT RECIENTE</a>
+            <a href="https://www.mediafire.com/file/thkxd7grm5yb0a7/%2523Enc_ALL_IN_ONE_V4.9.6.lua/file" class="cyber-button download" target="_blank">📥 SCRIPT RECIENTE</a>
         </div>
 
         <div class="service-box">
@@ -297,6 +297,7 @@
     </script>
 </body>
 </html>
+
 
 
 
