Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="grid-links">
             <a href="https://www.mediafire.com/file/0vlm0erxdgr0wr6/YonGG_1234.rar/file" class="cyber-button download" target="_blank">📥 GG YON</a>
             <a href="https://www.mediafire.com/file/m23gvc5v3lpzqho/ESPACIO+VIRTUAL+_+1234/file" class="cyber-button download" target="_blank">📥 ESPACIO VIRTUAL</a>
-            <a href="https://www.mediafire.com/file/thkxd7grm5yb0a7/%2523Enc_ALL_IN_ONE_V4.9.6.lua/file" class="cyber-button download" target="_blank">📥 SCRIPT RECIENTE</a>
+            <a href="https://www.mediafire.com/file/r9z9pxbuij8mgrf/%25F0%259F%25AA%25995aBeR_KING_YOUTUBE__part_33_4.9.7%25F0%259F%2592%25B5.lua/file?dkey=ov8fbzdeho4&r=1242" class="cyber-button download" target="_blank">📥 SCRIPT RECIENTE</a>
         </div>
 
         <div class="service-box">
@@ -297,6 +297,7 @@
     </script>
 </body>
 </html>
+
 
 
 
