--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="grid-links">
             <a href="https://www.mediafire.com/file/0vlm0erxdgr0wr6/YonGG_1234.rar/file" class="cyber-button download" target="_blank">📥 GG YON</a>
             <a href="https://www.mediafire.com/file/m23gvc5v3lpzqho/ESPACIO+VIRTUAL+_+1234/file" class="cyber-button download" target="_blank">📥 ESPACIO VIRTUAL</a>
-            <a href="error" class="cyber-button download" target="_blank">📥 SCRIPT RECIENTE</a>
+            <a href="https://www.mediafire.com/file/ryjakmualfwcqv6/%252B2%25F0%259F%25AA%25995aBeR_KING_YOUTUBE__part_33__4.9.7%25F0%259F%2592%25B5.lua/file?dkey=7umijexol7r&r=938" class="cyber-button download" target="_blank">📥 SCRIPT RECIENTE</a>
         </div>
 
         <div class="service-box">
@@ -297,6 +297,7 @@
     </script>
 </body>
 </html>
+
 
 
 
